<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">


    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/resultados_calculadora_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <Button
        android:id="@+id/continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#fff"
        android:text="@string/continuar"
        android:textAllCaps="false"
        android:textColor="#28A525"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultado"
        app:layout_constraintStart_toStartOf="@+id/resultado" />

    <TextView
        android:id="@+id/kilovatios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:drawableRight="@drawable/ic_baseline_battery_charging_full_24"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/calculadora_electrico"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/coche"
        app:layout_constraintEnd_toEndOf="@+id/TextView"
        app:layout_constraintStart_toStartOf="@+id/TextView"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <TextView
        android:id="@+id/coche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:drawableRight="@drawable/ic_baseline_drive_eta_24"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/calculadora_coche"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/autobus"
        app:layout_constraintEnd_toEndOf="@+id/kilovatios"
        app:layout_constraintStart_toStartOf="@+id/kilovatios"
        app:layout_constraintTop_toBottomOf="@+id/kilovatios" />

    <TextView
        android:id="@+id/autobus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:drawableRight="@drawable/ic_baseline_directions_bus_24"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/calculadora_transporte"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vuelo"
        app:layout_constraintEnd_toEndOf="@+id/coche"
        app:layout_constraintStart_toStartOf="@+id/coche"
        app:layout_constraintTop_toBottomOf="@+id/coche" />

    <TextView
        android:id="@+id/vuelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:drawableRight="@drawable/ic_baseline_airplanemode_active_24"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/calculadora_aereo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dieta"
        app:layout_constraintEnd_toEndOf="@+id/autobus"
        app:layout_constraintStart_toStartOf="@+id/autobus"
        app:layout_constraintTop_toBottomOf="@+id/autobus" />

    <TextView
        android:id="@+id/dieta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:drawableRight="@drawable/ic_baseline_local_dining_24"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/calculadora_dieta"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintEnd_toEndOf="@+id/vuelo"
        app:layout_constraintStart_toStartOf="@+id/vuelo"
        app:layout_constraintTop_toBottomOf="@+id/vuelo" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/resultados_calculadora"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/continuar"
        app:layout_constraintEnd_toEndOf="@+id/dieta"
        app:layout_constraintStart_toStartOf="@+id/dieta"
        app:layout_constraintTop_toBottomOf="@+id/dieta" />

</androidx.constraintlayout.widget.ConstraintLayout>